Add first draft of concurrent sound